# borealis_postprocessors

./: README.md  antennas_iq_files.txt  antennas_iq_to_bfiq.py  antis2bfiq_files.txt  batch_log.py  bfiq_files.txt  bfiq_to_rawacf.py  conversion.py  convert.py  output_ptrs_files.csv  output_ptrs_files.txt  output_ptrs_to_antennas_iq.py  posthdf5.py  processed_antiq_files.csv  processed_antiq_files.txt  processed_antiq_filescpid.csv  processed_bfiq_files.txt  pyproject.toml  rawacf_files.txt  setup.py  walk_hdf5.py
control/: conversion.py  fileread.py
data_processing/: antennas_iq_to_bfiq.py  antennas_iq_to_rawacf.py  antennasiq_to_bfiq.py  bfiq_to_rawacf.py  convert_antennas_iq.py  convert_base.py  convert_bfiq.py  dsp.py  imaging.py  rawacf_lag0.py  widebeam_antennas_iq_to_rawacf.py
data_processing/sandbox/: bistatic_processing.py  extract_timestamps.py  process_impt.py  rawacf_record_averaging.py  widebeam_antennas_iq_to_bfiq.py
data_processing/utils/: restructure.py
exceptions/: conversion_exceptions.py
post_processing/: antennas_iq_to_bfiq.py
postprocessors/: __init__.py
postprocessors/core/: antennas_iq_to_bfiq.py  antennas_iq_to_rawacf.py  bfiq_to_rawacf.py  conversion.py  convert_base.py  (+1 more)
scripts/: bistatic_postprocessing.py  cfs_analysis.py  memory_limited_postprocessing.py  timestamp_extraction.py  wavelet_analysis.py  widebeam_processing.py
test/: README.md  bfiq.hdf5  bfiq.hdf5.site  bfiq.sdarn  rawacf.alt.hdf5  rawacf.alt.hdf5.site  rawacf.hdf5  rawacf.hdf5.site  rawacf.sdarn  test_antiq2bfiq.py  test_antiq2rawacf.py  test_bfiq2rawacf.py
(+21 files in other folders)
