[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'borealis-postprocessors'
version = '1.0.0'
description = 'Post-process SuperDARN Borealis data files'
readme = 'README.md'
authors = [{name = 'Remington Rohel'}]
license = {file = 'LICENSE'}
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.6 :: 3.7 :: 3.8 :: 3.9',
    'Topic :: Scientific/Engineering',
    'Operating System :: Linux',
]
keywords = ['SuperDARN', 'Borealis']
dependencies = ['numpy', 'pyDARNio', 'h5py', 'deepdish', 'scipy', ]
requires-python = '>=3.6'

[project.optional-dependencies]
gpu = ['cupy']

[project.urls]
Homepage = 'https://github.com/SuperDARNCanada/borealis_postprocessors'
